Redo switch overflow fix

--- a/admin/scss/_forms.scss
+++ b/admin/scss/_forms.scss
@@ -650,10 +650,9 @@ input.radio {
 *			<span class="slide-button"></span>	
 *		</div>			
 *	</fieldset>
-* Note: Switch works best if labels are all around equal width, but will 
-* hide overflow if necessary. For best results, keep labels short
 ****************************************************************/
-fieldset.switch-states{		
+fieldset.switch-states{	
+	padding:0 20px 0 0;	
 	.switch{
 		@include box-shadow(inset 0 2px 6px rgba(0, 0, 0, 0.1), 0 1px 0px rgba(255, 255, 255, 0.1));
 		@include border-radius(3px);
@@ -662,13 +661,12 @@ fieldset.switch-states{
 		display: block;				
 		height: 25px;
 		margin-top:3px;
-		padding: 0;
+		padding:0 10px;	
 		position: relative;			
 		width:100%;
 		z-index:5;
 		
 		label{
-			@include box-sizing('border-box');
 			@include hide-text-overflow;
 			@include text-shadow(0 1px 0 rgba(255,255,255,0.5));	
 			color:lighten($color-text-dark,40%);
@@ -677,9 +675,7 @@ fieldset.switch-states{
 			float:left;
 			font-weight:bold;
 			height: 100%;
-			line-height: 25px;	
-			text-align:center;
-			padding:0 10px;			
+			line-height: 25px;		
 			position:relative;
 			z-index:2;	
 			/* Make text unselectable in browsers that support that */
@@ -693,6 +689,12 @@ fieldset.switch-states{
 				color:lighten($color-text-dark, 30%);	
 				color:rgba($color-text-dark,0.7);								
 			}	
+			span{
+				@include box-sizing('border-box');
+				@include hide-text-overflow;
+				display:inline-block;
+				padding:0 10px;
+			}
 		}
 		input {
 			opacity: 0;
